Fixed getFirst() error